--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ repositories {
 }
 
 dependencies {
-	testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
+	implementation 'org.jetbrains:annotations:20.1.0'
+    testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
 }
 
 sourceSets {
